client/src/pages/Highscores/Highscores.css
body {
    height: 100%;
    /* background-image: url("./Assets/Link_vs_Mario.gif"); */
    background-color: #cccccc;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
   }

.card {
       height: 65%;
       font-size: 2.5rem; 
       width: fit-content;
       display: block; 
   } 

   

li {
    list-style: none;
    line-height: 1.5em;
    font-size: inherit;
} 

header {
    font-size: 2.5rem;
    color: rgb(3, 99, 209);
    /* display: 'inline-block'; */
    font-style: oblique;
    text-align: center;
    text-decoration: underline;
    margin-bottom: .8em;
}

div {
    
    font-style: italic;
    text-align: center;
    margin-left: 4px;
}

.player1 {
    color: #fff;
    justify-self: start;
    }
.player2 {
    color: #fff;
    justify-self: start;
}
.player3 {
    color: #fff;
    justify-self: start;
}
.player4 {
    color: #fff;
    justify-self: start;
}
.player5 {
    color: #fff;
    justify-self: start;
}

